# PhotoRevive

./: .replit  API_DOCUMENTATION.md  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md  design_guidelines.md  package.json  pyproject.toml  replit.md  start_servers.sh
client/: index.html
client/src/: index.css
client/src/components/: ComparisonSlider.tsx  ExamplesGallery.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  ProcessingOverlay.tsx  UploadZone.tsx
client/src/components/examples/: ComparisonSlider.tsx  ExamplesGallery.tsx  Header.tsx  Hero.tsx  ProcessingOverlay.tsx  UploadZone.tsx
client/src/pages/: Home.tsx  not-found.tsx
server/: photo_api.py  photo_processor.py  routes.ts  start_python_api.sh
